--- a/app/src/main/res/layout/content_user_settings.xml
+++ b/app/src/main/res/layout/content_user_settings.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/imageButton"
                     android:src="@android:drawable/ic_menu_edit"
-                    android:visibility="visible" />
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
