--- a/app/src/main/res/layout/activity_communication_panel.xml
+++ b/app/src/main/res/layout/activity_communication_panel.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.example.suryansh.infobits.homepage"
+    tools:context="com.bitspilani.library.infobits.homepage"
     android:id="@+id/drawer_layout"
     >
 <android.support.design.widget.CoordinatorLayout
@@ -13,7 +13,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:fitsSystemWindows="false"
-    tools:context="com.example.suryansh.infobits.CommunicationPanel">
+    tools:context="com.bitspilani.library.infobits.CommunicationPanel">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
         android:fitsSystemWindows="true" android:layout_height="@dimen/app_bar_height"
