--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.example.suryansh.infobits.homepage"
+    tools:context="com.bitspilani.library.infobits.homepage"
     android:id="@+id/drawer_layout"
     >
 
