--- a/app/src/main/res/layout/downloadable_links.xml
+++ b/app/src/main/res/layout/downloadable_links.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
-    tools:context="com.example.suryansh.infobits.downloadable_links"
+    tools:context="com.bitspilani.library.infobits.downloadable_links"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
